# crab_frb_paper

./: CMakeLists.txt  README.md
apps/: main_autocorr_1D.cpp  main_structure_function_1D.cpp
scripts/: unwrap_profile.sh
scripts/arfiles/: create_single_pulse_archive.sh  dm_from_gp.sh  dm_from_gp_all.sh  dm_from_gp_replot.sh  dm_from_gp_replot_all.sh  dump_brightest_pulses_arfiles.sh  dump_brightest_pulses_arfiles_execute.sh  find_bright_presto_pulses.sh  find_pulse_amongst_arfiles.sh  merge_psr_n.sh  merge_psr_n_and_refit.sh  plot_dmslope_vs_time.sh  plot_tau_scaling_index_vs_time.sh  refit_all_merged.sh  refit_dm.sh  refit_dm_all.sh  scam_tau_vs_freq.sh  scp_single_pulse_arfiles.sh  unwrap_profile.sh
scripts/calib/: analyse_all.sh  calc_snr.sh  calibrate_pulses.sh  calibrate_pulses_all.sh  dm_vs_time.sh  extract_from_timeseries.sh  final_plots.sh  fit_all_profiles.sh  fit_all_profiles_all_dates.sh  fit_fwhm_all.sh  fit_profiles.sh  fit_profiles_all.sh  fit_pulse_profiles.sh  fluence.sh  fluence_all.sh  fluence_completness_check.sh  fluence_mp_and_ip.sh  generete_all_sefds.sh  my_friends_of_friends_PRESTO.py  plot_fitted_maxfluence_vs_time.sh  plot_fluence_mp_and_ip_all.sh  plot_maxfluence_vs_time.sh  plot_scattering_vs_time.sh  plot_scattering_vs_time_fromhistofit.sh  presto2cand.sh  process_all_datasets.sh  process_all_datasets_final.sh  process_dataset.sh  process_dataset_accdm.sh  process_fluence_and_scatter.sh  process_presto_candidates.sh  refit_all_max_snr_profiles.sh  refit_flux_snr_spectrdensity.sh  refit_tau.sh  replot_fluence_vs_time.sh  scan_dm.sh  scattering_time_from_all_fits.sh  snr2jy.sh
scripts/crab/: crab_fu.py  (+2 more)
(+168 files in other folders)
